[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Level_1_Sprites/greenCrystal.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Level_1_Scripts/health_box.gd" type="Script" id=2]
[ext_resource path="res://Audio/Level_1_Sounds/SoundForFinalGame/Collectible/HealthPickUp/HealUpRDV2.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 15 )

[node name="Health_Box_Node" type="Node2D"]
script = ExtResource( 2 )

[node name="health_box" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="health_box"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="health_box"]
shape = SubResource( 1 )
one_way_collision = true
one_way_collision_margin = 0.0

[node name="Area2D" type="Area2D" parent="health_box"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="health_box/Area2D"]
shape = SubResource( 2 )

[node name="despawn" type="Timer" parent="."]
wait_time = 0.85
one_shot = true

[node name="health_pickup_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="health_box/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="despawn" to="." method="_on_despawn_timeout"]
